# MCBE-Bot

./: .replit  Procfile  README.md  TTpack.mcpack  Techbot.py  app.txt  default.json  help.json  infos.json  keep_alive.py  pyproject.toml  requirements.txt
guilds/: 724677850413924352.json  742196425064185877.json  761594268405989396.json  786114278268600340.json  795187736322506782.json  795954680382881803.json  796622327172956180.json  807546631271612456.json  816419851257118780.json  819121115971977276.json  823362441362538507.json  828743399271956481.json  830564610171207684.json  835136512839385149.json  836284178244173875.json  841538611044548649.json  841692952911675413.json  847183491468492902.json  848451368276197376.json  default.json
star/: 742196425064185877.json  761594268405989396.json  795187736322506782.json  807546631271612456.json  816419851257118780.json  819121115971977276.json  823362441362538507.json  841538611044548649.json  841692952911675413.json
