[tool.poetry]
name = "repl_python3_MCBE-Bot-1"
version = "0.1.0"
description = ""
authors = ["MCBECraft <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
